RD415: further eslint config and code linting

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"run:dev": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"eslint:github-action": "eslint -c .eslintrc.json src/"
 	},
 	"eslintConfig": {
 		"extends": [
